<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="movies_error">Unable to retrieve movies from theMovieDB</string>

    <string name="title_activity_settings">Settings</string>
    <string name="sort_by_title">Sort By</string>
    <string name="sort_by_key">sortBy</string>
    <string name="default_sort_value">popularity</string>

    <string-array name="sort_by_options">
        <item>Popularity</item>
        <item>User Rating</item>
        <item>Release Date</item>
        <item>Revenue</item>
        <item>Title</item>
    </string-array>

    <string-array name="sort_by_values">
        <item>popularity</item>
        <item>vote_average</item>
        <item>release_date</item>
        <item>revenue</item>
        <item>original_title</item>
    </string-array>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="summary_label">Summary: </string>
    <string name="release_date_label">Release Date: </string>
    <string name="user_rating_label">User Rating: </string>
    <string name="view_trailers_button">View Trailers</string>
    <string name="read_reviews_button">Read Reviews</string>
    <string name="movie_poster_content_description">Movie poster</string>
    <string name="not_favorite">Not A Fan</string>
    <string name="favorite">Love This Film</string>

    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activities_trailers">Movie Trailers</string>
    <string name="trailers_error">No trailers found</string>

    <string name="review_name_title">Review By</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec enim quis elit hendrerit porta eget eget velit. Donec magna lorem, dignissim eget lectus vitae, eleifend lobortis tellus. Mauris blandit elit vitae nunc malesuada, et rutrum nulla rhoncus. Pellentesque varius ante diam, ornare viverra diam posuere id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc sollicitudin vulputate ligula, eget congue ipsum pharetra quis. Maecenas eget mauris at enim condimentum interdum eget vitae lectus. Sed in dignissim ipsum, sit amet lobortis lectus. Suspendisse potenti. Aenean sed nisl mattis risus gravida viverra a viverra tortor. Sed eu interdum ex, a gravida mauris. Praesent condimentum a tellus sit amet lobortis. Aliquam felis neque, hendrerit eu euismod ac, porttitor sit amet orci. Suspendisse iaculis scelerisque sapien euismod varius. Nunc dapibus libero a convallis fringilla. Mauris fringilla, purus a semper sagittis, nisl elit posuere.</string>
    <string name="read_on_web_button">Read this review on the Web</string>
    <string name="reviews_error">No Reviews Found</string>
    <string name="no_favorites_found">No Favorites found! Set some Favorites!</string>
</resources>
