<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_scroll_view"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jcorpac.udacity.popularmovies.DetailActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/view_favorite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/img_favorite_star"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_star"
                android:layout_marginEnd="@dimen/FavStarMargin"
                android:layout_marginRight="@dimen/FavStarMargin"
                android:layout_marginStart="@dimen/FavStarMargin"
                android:layout_marginLeft="@dimen/FavStarMargin"
                android:layout_gravity="center_horizontal"
                android:tint="@color/color_favorite_disabled" />

            <TextView
                android:id="@+id/img_favorite_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/not_favorite"
                tools:text="@string/favorite"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Movie Title!"
            android:id="@+id/txt_movie_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/view_favorite_icon"
            android:layout_toStartOf="@id/view_favorite_icon"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            style="@style/DetailTextStyle"
            android:text="@string/summary_label"
            android:id="@+id/txt_summary_title"
            android:layout_below="@+id/txt_movie_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DetailTextStyle"
            tools:text="Movie Summary Text"
            android:id="@+id/txt_summary_text"
            android:layout_below="@id/txt_summary_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/img_poster"
            tools:src="@drawable/ic_placeholder"
            android:layout_below="@id/txt_summary_text"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/movie_poster_content_description" />

        <TextView
            android:id="@+id/txt_user_rating_title"
            style="@style/DetailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/img_poster"
            android:layout_marginBottom="8dp"
            android:text="@string/user_rating_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailTextStyle"
            tools:text="User Rating Text"
            android:id="@+id/txt_user_rating"
            android:layout_alignTop="@id/txt_user_rating_title"
            android:layout_toRightOf="@id/txt_user_rating_title"
            android:layout_toEndOf="@id/txt_user_rating_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailTextStyle"
            android:text="@string/release_date_label"
            android:id="@+id/txt_release_date_title"
            android:layout_below="@id/txt_user_rating_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailTextStyle"
            tools:text="Release Date Text"
            android:id="@+id/txt_release_date"
            android:layout_alignTop="@id/txt_release_date_title"
            android:layout_toRightOf="@id/txt_release_date_title"
            android:layout_toEndOf="@id/txt_release_date_title"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/center_line"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/btn_view_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_trailers_button"
                android:layout_below="@+id/txt_release_date"
                android:layout_margin="8dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/center_line"
                android:layout_toStartOf="@id/center_line"/>

            <Button
                android:id="@+id/btn_read_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_reviews_button"
                android:layout_margin="8dp"
                android:layout_alignBaseline="@+id/btn_view_trailers"
                android:layout_alignBottom="@+id/btn_view_trailers"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@id/center_line"
                android:layout_toEndOf="@id/center_line"/>

        </RelativeLayout>
</ScrollView>
